# uBike

./: .gitignore  README.md
firmware/: .clang-format
firmware/zephyr-project/: CMakeLists.txt  prj.conf
firmware/zephyr-project/boards/: nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf5340dknrf5340_cpuapp_ns.conf  nrf5340dknrf5340_cpuapp_ns.overlay  ubike_v03.conf  ubike_v04.overlay
firmware/zephyr-project/boards/arm/ubike_v03/: Kconfig.board  Kconfig.defconfig  ubike_v03-pinctrl.dtsi  ubike_v03.dts  ubike_v03.yaml  ubike_v03_defconfig
firmware/zephyr-project/boards/arm/ubike_v04/: Kconfig.board  Kconfig.defconfig  board.cmake  ubike_v04-pinctrl.dtsi  ubike_v04.dts  ubike_v04.yaml  ubike_v04_defconfig
firmware/zephyr-project/child_image/: mcuboot.conf
firmware/zephyr-project/include/: asciiModbus.h  bikeControl.h  common.h  cps.h  cscs.h  display.h  fec.h  ftms.h
firmware/zephyr-project/src/: asciiModbus.c  bikeControl.c  cps.c  cscs.c  display.c  fec.c  ftms.c  main.c
hardware/board/kicad/: external-connections.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  uBike-BoM.xlsx  uBike-top-pos.csv  uBike.csv  uBike.kicad_pcb  uBike.kicad_prl  uBike.kicad_pro  uBike.kicad_sch  uBike.xml
hardware/board/kicad/libs/: 16SVF180M.kicad_mod  2024-02-06_04-13-04.kicad_sym  20SVPF120M.dcm  20SVPF120M.kicad_sym  20SVPF120M.lib  20SVPF120M.mod  20SVPF120M.stp  87520-0010BLF.kicad_mod  87520-0010BLF.kicad_sym  87520-0010BLF.stp  CDSOT23-SM712.kicad_sym  CHEMI-KE0-L.kicad_mod  CHEMI-KE0-M.kicad_mod  CHEMI-KE0.kicad_mod  CHEMI-KE0.step  CHEMI-KE0.stl  F31S-1A7L1-11040.dcm  F31S-1A7L1-11040.epw  F31S-1A7L1-11040.lib  F31S-1A7L1-11040.mod  F31S-1A7L1-11040.stp  F31S1A7L111040.kicad_mod  FTSH-105-01-F-DV-K.dcm  FTSH-105-01-F-DV-K.lib  FTSH-105-01-F-DV-K.mod  FTSH-105-01-F-DV-K.step  FTSH10501FDVK.kicad_mod  INDPM120120X1020N.kicad_mod  KMDGX-6S-BS.dcm  KMDGX-6S-BS.lib  KMDGX-6S-BS.mod  KMDGX-6S-BS.stp  KMDGX-8S-BS.dcm  KMDGX-8S-BS.lib  KMDGX-8S-BS.mod  KMDGX-8S-BS.stp  KMDGX6SBS.kicad_mod  KMDGX8SBS.kicad_mod  L_Bourns_5050.kicad_mod  MDBT50Q-P.stp  (+21 more)
hardware/models/: uBike-v4.stl  uBike.stl  uBikeBase.stl
hardware/models/freecad/: uBike-v4.FCStd  uBike.FCStd  uBikeBase.FCStd
misc-scripts/: create-data.py  curve-fit.py  fake-data.csv  scripts.md  serial-test.py  sim-bike.py
